k8s/compliance/require-labels-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: object
                properties:
                  key:
                    type: string
                  allowedRegex:
                    type: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredlabels
      
      violation[{"msg": msg}] {
        missing_label(input.review.object.metadata.labels)
        msg := sprintf("label '%v' is required", [names.missing[0]])
      }
      
      missing_label(labels) = names {
        provided := {label | labels[label]}
        required := {label | input.parameters.labels[_].key == label}
        names := required - provided
      }
